Se hacen correciones segun el QA